--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,29 +10,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <!-- CORREÇÃO CRÍTICA: Permissão OBRIGATÓRIA para que o app possa solicitar -->
-    <!-- a conexão com a rede Wi-Fi do videolaringoscópio. A ausência desta -->
-    <!-- permissão é a causa exata do crash "SecurityException". -->
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
-    <!-- Permissão necessária em APIs mais recentes para escanear e se conectar a redes Wi-Fi. -->
+    <!-- Permissão para localização (necessária para Wi-Fi scanning no Android 10+) -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <!-- PERMISSÕES DE MÍDIA -->
-    <!-- Permissão para gravar áudio durante a gravação de vídeos. -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- Permissão para salvar fotos e vídeos (necessária para Android 9 e inferior). -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
-    <!-- PERMISSÃO DE CÂMERA -->
-    <!-- Embora a câmera do celular não seja usada, declarar isso pode ser necessário -->
-    <!-- para algumas APIs de mídia. `required="false"` garante que o app possa ser -->
-    <!-- instalado em dispositivos sem câmera. -->
+    <!-- Feature de câmera opcional -->
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:name=".BsafeApplication"
@@ -65,7 +55,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"
             tools:ignore="LockedOrientationActivity" />
 
-        <!-- FileProvider para compartilhar mídias de forma segura -->
+        <!-- FileProvider para compartilhar mídias -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.bsafe.videolaryngoscope.provider"
