--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,82 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bsafe.videolaryngoscope">
 
-    <!-- ============================================== -->
-    <!-- PERMISSÕES CRÍTICAS PARA COMUNICAÇÃO DE REDE -->
-    <!-- ============================================== -->
-
-    <!-- Permissões básicas de rede - ESSENCIAIS para comunicação UDP -->
+    <!-- Permissões de rede CRÍTICAS -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
-    <!-- CRÍTICO: Permite comunicação UDP multicast com o dispositivo -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-
-    <!-- Permite mudanças de rede para Android 10+ -->
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
-    <!-- Permissões de localização necessárias para Wi-Fi scanning no Android 6+ -->
+    <!-- Localização para Wi-Fi -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <!-- ============================================== -->
-    <!-- PERMISSÕES PARA MÍDIA E ARMAZENAMENTO -->
-    <!-- ============================================== -->
-
-    <!-- Permissões de câmera para captura de frames do stream -->
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <!-- Permissões de armazenamento para Android < 10 -->
+    <!-- Armazenamento -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-
-    <!-- Para Android 13+ (API 33+) - leitura de mídia -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
-    <!-- Permissões de áudio para gravação com som -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-
-    <!-- ============================================== -->
-    <!-- PERMISSÕES PARA FUNCIONALIDADES DO SISTEMA -->
-    <!-- ============================================== -->
-
-    <!-- Mantém o dispositivo acordado durante streaming -->
+    <!-- Outras -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Vibração para feedback do usuário -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <!-- Permissão para foreground service (Android 9+) -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!-- ============================================== -->
-    <!-- FEATURES DO HARDWARE -->
-    <!-- ============================================== -->
-
-    <!-- Declara uso de features mas não as torna obrigatórias -->
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+    <!-- Features -->
     <uses-feature android:name="android.hardware.wifi" android:required="true" />
-    <uses-feature android:name="android.hardware.wifi.direct" android:required="false" />
-
-    <!-- Suporte para OpenGL ES 2.0 (renderização do stream de vídeo) -->
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
-
-    <!-- ============================================== -->
-    <!-- CONFIGURAÇÃO DA APLICAÇÃO -->
-    <!-- ============================================== -->
+    <uses-feature android:glEsVersion="0x00020000" android:required="false" />
 
     <application
         android:name=".BsafeApplication"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -87,61 +43,26 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true"
         android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true"
-        android:preserveLegacyExternalStorage="true"
-        android:extractNativeLibs="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="34">
-
-        <!-- ============================================== -->
-        <!-- ATIVIDADE PRINCIPAL (TELA DE CONEXÃO) -->
-        <!-- ============================================== -->
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="landscape"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
-            android:windowSoftInputMode="adjustResize|stateHidden">
-
-            <!-- Intent filter principal para lançar o app -->
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <!-- Intent filter opcional para URLs customizadas -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="bsafe" android:host="connect" />
-            </intent-filter>
         </activity>
-
-        <!-- ============================================== -->
-        <!-- ATIVIDADE DA CÂMERA (VISUALIZAÇÃO DO STREAM) -->
-        <!-- ============================================== -->
 
         <activity
             android:name=".CameraActivity"
             android:exported="false"
             android:screenOrientation="landscape"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
-            android:launchMode="singleTask"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            android:keepScreenOn="true">
-
-            <!-- Metadata para otimizações de hardware -->
-            <meta-data
-                android:name="android.hardware.camera.concurrent"
-                android:value="false" />
-        </activity>
-
-        <!-- ============================================== -->
-        <!-- PROVIDER PARA COMPARTILHAMENTO DE ARQUIVOS -->
-        <!-- ============================================== -->
+            android:keepScreenOn="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -153,44 +74,6 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <!-- ============================================== -->
-        <!-- METADATA DA APLICAÇÃO -->
-        <!-- ============================================== -->
-
-        <!-- Configuração para Large Heap em tablets -->
-        <meta-data
-            android:name="android.max_aspect"
-            android:value="2.4" />
-
-        <!-- Suporte para telas com notch -->
-        <meta-data
-            android:name="android.notch_support"
-            android:value="true" />
-
     </application>
-
-    <!-- ============================================== -->
-    <!-- QUERIES PARA ANDROID 11+ (PACKAGE VISIBILITY) -->
-    <!-- ============================================== -->
-
-    <queries>
-        <!-- Permite verificar apps de câmera instalados -->
-        <intent>
-            <action android:name="android.media.action.IMAGE_CAPTURE" />
-        </intent>
-        <intent>
-            <action android:name="android.media.action.VIDEO_CAPTURE" />
-        </intent>
-
-        <!-- Permite compartilhamento com outros apps -->
-        <intent>
-            <action android:name="android.intent.action.SEND" />
-            <data android:mimeType="image/*" />
-        </intent>
-        <intent>
-            <action android:name="android.intent.action.SEND" />
-            <data android:mimeType="video/*" />
-        </intent>
-    </queries>
 
 </manifest>
